--- a/templates/upload-audio.html
+++ b/templates/upload-audio.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
-                        ACPS
+                        <div class="small" style="padding-top: 18px;">ACPS:</div>
                     </div>
                 </nav>
             </div>
@@ -57,8 +57,15 @@
                 <main>
                     <div class="container">
                         <div class="panel">
+                            <div class = "upload_desc">
+                                Please upload your chicken audio here
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="panel">
                             <div class="button_outer">
-                                <div class="btn_upload">
+                                <div class="btn_upload pulsate-bck">
                                     <input type="file" id="upload_file" name="">
                                     Upload Audio
                                 </div>
