--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
                                 <div class="card bg-primary text-white mb-4">
                                     <div class="card-body">Temperature</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <span class="small text-white stretched-link" id="degreeFetch">26 degree</span>
+                                        <span class="small text-white stretched-link" id="degreeFetch">°C</span>
                                         <div class="small text-white"></div>
                                     </div>
                                 </div>
